@@ -1,38 +1,48 @@
-[![SANTORINI](https://pbs.twimg.com/media/DcMrncHWsAIr5dB?format=jpg&name=small)
+![SANTORINI](https://pbs.twimg.com/media/DcMrncHWsAIr5dB?format=jpg&name=small)
 # Prova Finale di Ingegneria del Software a.a. 2019-2020
-Durante questa prova finale è stato richiesto ai partecipanti all'appello di implementare il gioco [Santorini](http://www.craniocreations.it/prodotto/santorini/), utilizzando il linguaggio di programmazione Java e, più nello specifico il pattern Model View Controller. Il progetto copre tutte le regole del gioco ad eccezione della partita a quattro giocatori, e permette di utilizzare non tutti i gods disponibili nel gioco fisico. Utilizzando la programmazione ad oggetti sono state sviluppate due differenti modalità di gioco: CLI e GUI. La modalità di gioco CLI è una modalità semplice, non dotata di un'interfaccia grafica e da utilizzare solo sul terminale. Per chi invece desiderasse un'esperienza di gioco più coinvolgente ed esteticamente accativante c'è la modalità GUI, dotata un'interfaccia grafica più completa.
+During this year final exam the partecipants were required to implement the game [Santorini](http://www.craniocreations.it/prodotto/santorini/) using Java programming language and in particular Model View Controller pattern. The project covers all the game's rules for two and three players with the exceptions of severals advanced gods. Using object-oriented programming two different game modes were developed: CLI and GUI. CLI mode (Command Line Interface) offers a simple game mode to be used in the command line. For those who would like a more complete and good-looking game experience, there is the GUI (Graphical User Interface).
 
 ## UML
-La documentazione UML è presente in due forme, la prima, quella sviluppata al primo approccio col preoblema presentatoci, la seconda, quella sviluppata una volta ultimato il programma. Si notano interessanti e significativi cambiamenti tra i modelli
-* [UML Iniziale](/http://linkUMLiniziale.com)
+The UML documentation is avialable in two different versions, the initial one, created as soon as the problem was brought us, and the final one: created once completed the program. There are several and interesting differences.
 
-* [UML Finale](/http://linkUMLfinale.com)
+* [Initial UML](/http://linkUMLiniziale.com)
 
-## JAVADOC
-Al progetto è stata affiancata una documentazione in formato java (JUnit 5) che copre la maggior parte delle classi e dei metodi significativi. Essa è disponibile al seguente [link](http://linkJAVAdoc.com).
+* [Final UML](/http://linkUMLfinale.com)
 
-## FUNZIONALITA' IMPLEMENTATE
+## JavaDoc
+The project is also provided with a Java documentation (JUnit 5) that covers almost every model's class.
+
+## Implemented functionality
 | Functionality | State |
 |:-----------------------|:------------------------------------:|
 | Basic rules | [![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
 | Complete rules |[![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
 | Socket |[![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
 | GUI | [![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
-| CLI |[![YELLOW](https://placehold.it/15/ffdd00/ffdd00)](#) |
+| CLI |[![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
 | Multiple games | [![RED](https://placehold.it/15/f03c15/f03c15)](#) |
 | Persistence | [![RED](https://placehold.it/15/f03c15/f03c15)](#) |
 | Advanced Gods | [![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
 | Undo | [![RED](https://placehold.it/15/f03c15/f03c15)](#) |
 
+## JAR Execution
+For both client and server jars is required [Java 14.0.1 JDK](https://jdk.java.net/14/) version.
+The jars can be found in the deliverables folder of the project.
+
+### Server
+You can launch the server with the command <code> java --enable-preview -jar .\AM49-Server.jar </code>
+  
+### Client
+Once found the client jar, the it will be enough to type  <code> java --enable-preview -jar .\AM49-Client.jar </code>
+- CLI 
+In order to use this game mode it will be necessary to insert the parameter <code>-CLI</code> when launching the jar file
+- GUI
+To play in GUI game mode, there are no other parameters to add
+
+It will anyways be possible to switch from one mode to another in some moments during the program's excution. For example during a CLI game by typing switch, or in a GUI game by selecting CLI during the login.
 ## Gruppo AM49
 
 - ###   10603433    Filippo Betti ([@FilippoBetti98](https://github.com/FilippoBetti98))<br>filippo.betti@mail.polimi.it
 - ###   10560934    Carmine Alberto ([@carmine-alberto](https://github.com/carmine-alberto))<br>carmine.alberto@mail.polimi.it
 - ###   10556595    Jacopo Battiato ([@batjacopo](https://github.com/batjacopo))<br>jacopo.battiato@mail.polimi.it
 <br>
-
-<!--
-[![RED](https://placehold.it/15/f03c15/f03c15)](#)
-[![YELLOW](https://placehold.it/15/ffdd00/ffdd00)](#)
-[![GREEN](https://placehold.it/15/44bb44/44bb44)](#)
--->
